@@ -1,0 +1,1 @@
+<%# locals: (comp_each_test:) %>ct
