@@ -1,1 +1,1 @@
-<%# locals: (title:) %><%= title %>
+<%# locals: (title:, local_test: nil) %><%= title %>
