@@ -1,1 +1,1 @@
-<%# locals: (title: 'ct') %><%= title %>
+<%# locals: (title: 'ct', opt_local_test: nil) %><%= title %>
